[gd_scene load_steps=2 format=3 uid="uid://7tfgalo8hlit"]

[ext_resource type="Script" uid="uid://clcm66gxm3h7i" path="res://TESTS/dictionary_save_test.gd" id="1_i5c6s"]

[node name="DictionarySaveTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i5c6s")

[node name="CurrentGameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
text = "Current game"
horizontal_alignment = 1

[node name="wordTextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.1
text = "mundu"
placeholder_text = "type something here"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.15
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
text = "Save Progress"

[node name="infoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
text = "info"
horizontal_alignment = 1
autowrap_mode = 3
